--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ Properties properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
 
 android {
-    namespace 'com.example.hamstertravelsapp'
-    compileSdk 36
+    namespace = 'com.example.hamstertravelsapp'
 
     defaultConfig {
         applicationId "com.example.hamstertravelsapp"
         minSdk 36
+        compileSdkVersion 36
         targetSdk 36
         versionCode 1
         versionName "2.0"
@@ -30,14 +30,15 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
     }
     kotlinOptions {
-        jvmTarget = '11'
+
     }
     buildFeatures {
         viewBinding = true
+        buildConfig = true
     }
 }
 
